--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: wasix-sysroot
+          path: wasix-sysroot
 
       - name: Publish
         run: |
