--- a/.github/workflows/build_cxx_sysroot.yml
+++ b/.github/workflows/build_cxx_sysroot.yml
@@ -1,10 +1,10 @@
 name: Build C/C++ Sysroot
 
 on:
-  # push:
-  #   branches: ["main"]
-  # pull_request:
-  #   branches: ["main"]
+  push:
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
   workflow_call:
 
 permissions:
