--- a/Makefile-eh
+++ b/Makefile-eh
@@ -216,6 +216,7 @@ LIBC_TOP_HALF_MUSL_SOURCES = \
         linux/setgroups.c \
         stat/futimesat.c \
         legacy/getpagesize.c \
+        legacy/getpass.c \
         thread/thrd_sleep.c \
         wasix/call_dynamic.c \
         wasix/closure_allocate.c \
