Remove dead code
The post-finish target did nothing, because it removed a file with a typo in it's name

--- a/Makefile-eh
+++ b/Makefile-eh
@@ -578,7 +578,7 @@ ifeq ($(THREAD_MODEL), single)
 MUSL_OMIT_HEADERS += "pthread.h"
 endif
 
-default: prepare finish post-finish
+default: prepare finish
 
 prepare:
 	rm $(SYSROOT_LIB)/libc.a || true
@@ -587,9 +587,6 @@ wasix-headers:
 	git submodule init
 	git submodule update
 	cargo run --manifest-path tools/wasix-headers/Cargo.toml generate-libc
-
-post-finish: finish
-	rm -f sysroot/lib/wasm32-wasi/libc-printscan-log-double.a
 
 $(SYSROOT_LIB)/libc.a: $(LIBC_OBJS)
 
