Rename normal eh to exnref eh and legacy eh to eh

--- a/.github/workflows/build_cxx_sysroot.yml
+++ b/.github/workflows/build_cxx_sysroot.yml
@@ -19,10 +19,10 @@ jobs:
       matrix:
         include:
           - variant: ""
+          - variant: "-exnref-eh"
+          - variant: "-exnref-ehpic"
           - variant: "-eh"
           - variant: "-ehpic"
-          - variant: "-legacy-eh"
-          - variant: "-legacy-ehpic"
     container:
       image: archlinux:base-devel
       options: --user root --workdir /
